Update project and app name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(deffohnCalculator VERSION 0.1 LANGUAGES CXX)
+project(stksCalculator VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -39,31 +39,31 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(deffohnCalculator
+    qt_add_executable(stksCalculator
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET deffohnCalculator APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET stksCalculator APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(deffohnCalculator SHARED
+        add_library(stksCalculator SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(deffohnCalculator
+        add_executable(stksCalculator
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(deffohnCalculator PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(stksCalculator PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(deffohnCalculator PROPERTIES
+set_target_properties(stksCalculator PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -72,5 +72,5 @@ set_target_properties(deffohnCalculator PROPERTIES
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(deffohnCalculator)
+    qt_finalize_executable(stksCalculator)
 endif()
